Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13368

SystemExtendedHandleInformation leaves user buffer uninitialized

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.6
    • NTCore
    • None

    Description

      This system information class is unimplemented.
      ntdll_winetest:om and ntdll_winetest:info depend on this and crash if their buffers are left uninitialized.
      We need a stub that allows these tests to proceed without crashing.

      Attachments

        Issue Links

          Activity

            People

              ThFabba ThFabba
              ThFabba ThFabba
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: