[NTOS:EX] - Stub NtQuerySystemInformation:SystemExtendedHandleInformation. Avoids crashes in the upcoming ntdll_winetest sync. CORE-13368 #resolve

svn path=/trunk/; revision=74980